AB#12 => fixing inadequate z-index of loader

--- a/Site/Gmf.Marush.Care.App/src/app/app.component.scss
+++ b/Site/Gmf.Marush.Care.App/src/app/app.component.scss
@@ -4,7 +4,7 @@
 
 .loader {
 	@include fixed.zero-position();
-	z-index: 2;
+	z-index: 3;
 	justify-content: center;
 	background-color: variables.$backdrop;
 
